--- a/mongo.cfg
+++ b/mongo.cfg
@@ -1,16 +1,6 @@
-systemLog:
-  destination: file
-  path: "/data/logs/mongo.log"
-  logAppend: true
-	verbosity: 3
-	timeStampFormat: ctime
-storage:
-	directoryPerDB: true
-	smallFiles: true
-  journal:
-    enabled: true
-processManagement:
-  fork: true
-net:
-	http:
-		enabled: true
+fork = true
+quiet = true
+logpath = /data/logs/mongo.log
+logappend = true
+journal = true
+verbose = true
