--- a/mongod-cfg.cfg
+++ b/mongod-cfg.cfg
@@ -2,5 +2,5 @@ quiet = true
 logpath = /data/logs/mongod-cfg.log
 logappend = true
 journal = true
-verbose = true
+verbose = false 
 directoryperdb = true
