--- a/mongod.cfg
+++ b/mongod.cfg
@@ -1,7 +1,8 @@
-quiet = true
 logpath = /data/logs/mongod.log
 logappend = true
 journal = true
-verbose = true
 rest = true
+jsonp = true
+vv = true
+profile = 2
 directoryperdb = true
