--- a/mongod-cfg.cfg
+++ b/mongod-cfg.cfg
@@ -1,5 +1,21 @@
-quiet = true
-logpath = /data/logs/mongod-cfg.log
-logappend = true
-journal = true
-directoryperdb = true
+storage:
+  syncPeriodSecs: 30
+  directoryPerDB: true
+  journal:
+    enabled: true
+  engine: "wiredTiger"
+  wiredTiger:
+    engineConfig:
+      directoryForIndexes: true
+    collectionConfig: 
+      blockCompressor: snappy        
+systemLog:
+  destination: file
+  path: "/data/logs/mongod-cfg.log"
+  logAppend: true
+  verbosity: 2
+security:
+  authorization: "disabled"
+operationProfiling:
+  mode: "slowOp"
+
