--- a/mongod.cfg
+++ b/mongod.cfg
@@ -1,6 +1,24 @@
-logpath = /data/logs/mongod.log
-logappend = true
-journal = true
-rest = true
-quiet = true
-directoryperdb = true
+net:
+  http:
+    enabled: true
+storage:
+  syncPeriodSecs: 30
+  directoryPerDB: true
+  journal:
+    enabled: true
+  engine: "wiredTiger"
+  wiredTiger:
+    engineConfig:
+      directoryForIndexes: true
+    collectionConfig: 
+      blockCompressor: snappy        
+systemLog:
+  destination: file
+  path: "/data/logs/mongod.log"
+  logAppend: true
+  verbosity: 2
+security:
+  authorization: "disabled"
+operationProfiling:
+  mode: "slowOp"
+
