--- a/mongos.cfg
+++ b/mongos.cfg
@@ -1,3 +1,5 @@
-quiet = true
-logpath = /data/logs/mongos.log
-logappend = true
+systemLog:
+  destination: file
+  path: "/data/logs/mongos.log"
+  logAppend: true
+  verbosity: 2
