--- a/mongod-cfg.cfg
+++ b/mongod-cfg.cfg
@@ -13,7 +13,8 @@ systemLog:
   destination: file
   path: "/data/logs/mongod-cfg.log"
   logAppend: true
-  verbosity: 2
+  verbosity: 1
+  timeStampFormat: "ctime"
 security:
   authorization: "disabled"
 operationProfiling:
