--- a/mongod.cfg
+++ b/mongod.cfg
@@ -1,8 +1,4 @@
-net:
-  http:
-    enabled: true
 storage:
-  syncPeriodSecs: 30
   directoryPerDB: true
   journal:
     enabled: true
@@ -16,7 +12,8 @@ systemLog:
   destination: file
   path: "/data/logs/mongod.log"
   logAppend: true
-  verbosity: 2
+  verbosity: 1
+  timeStampFormat: "ctime"
 security:
   authorization: "disabled"
 operationProfiling:
