--- a/mongos.cfg
+++ b/mongos.cfg
@@ -2,4 +2,5 @@ systemLog:
   destination: file
   path: "/data/logs/mongos.log"
   logAppend: true
-  verbosity: 2
+  verbosity: 1
+  timeStampFormat: "ctime"
